# backend

./: .env  Dockerfile  db.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
migration/: script.py.mako
migration/versions/: 35d4dbd00f8b_add_owner_id_column.py  7a227a9b76b5_initial.py
src/: main.py
src/project/api/: routes.py
src/project/core/: config.py
src/project/infrastructure/postgres/: database.py  models.py
src/project/infrastructure/postgres/repository/: agency_repo.py  analytics_repo.py  apartment_photo_repo.py  apartment_repo.py  apartment_type_repo.py  buyer.py  condition_repo.py  district_repo.py  house_repo.py  house_type_repo.py  owner_repo.py  realtor_repo.py  sales_rent_repo.py  sales_repo.py  status_repo.py  street_repo.py
src/project/schemas/: agency.py  analytics.py  apartment.py  apartment_photo.py  apartment_type.py  buyer.py  condition.py  district.py  house.py  house_type.py  owner.py  realtor.py  sales.py  sales_rent.py  status.py  street.py
